# f00

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  MIGRATION.md  Makefile  README.md  SECURITY.md  file_id.diz  flake.nix  install.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  freebsd.yml  pages.yml  publish-packages.yml  release.yml
Formula/: f00.rb
asm/: LICENSE  Makefile  README.md
asm/benches/: bench.sh  full-speed-gate.sh  parity.sh  speed-gate.sh
asm/man/: gen-manpages.sh
asm/man/man1/: f00-arch.1  f00-b2sum.1  f00-base32.1  f00-base64.1  f00-basename.1  f00-basenc.1  f00-cat.1  f00-chcon.1  f00-chgrp.1  f00-chmod.1  f00-chown.1  f00-chroot.1  f00-cksum.1  f00-comm.1  f00-cp.1  f00-csplit.1  f00-cut.1  f00-date.1  f00-dd.1  f00-df.1  f00-dir.1  f00-dircolors.1  f00-dirname.1  f00-du.1  f00-echo.1  f00-env.1  f00-expand.1  f00-expr.1  f00-factor.1  f00-false.1  f00-fmt.1  f00-fold.1  f00-groups.1  f00-head.1  f00-hostid.1  f00-hostname.1  f00-id.1  f00-install.1  f00-join.1  f00-kill.1  (+69 more)
asm/src/ls/: archive.asm  cat.asm  colors.asm  completions.asm  config.asm  format.asm  git.asm  icons.asm  ignore.asm  json.asm  list.asm  main.asm  meta.asm  names.asm  parallel.asm  plugin.asm  process.asm  quote.asm  suite_config.asm  suite_fs.asm  suite_hash.asm  suite_id.asm  suite_io.asm  suite_misc.asm  suite_path.asm  suite_text.asm  suite_ux.asm  syscalls.inc  theme.asm  tiny.asm  tree.asm  tui.asm  update.asm  util.asm
asm/src/runtime/linux/: syscalls.inc
crates/f00-archive/: Cargo.toml
crates/f00-archive/src/: lib.rs
crates/f00-cli/: Cargo.toml
crates/f00-cli/src/: cli.rs  config.rs  lib.rs  main.rs  plugins_cmd.rs  run.rs  update.rs
crates/f00-cli/tests/: config_cli.rs  exit_codes.rs  gnu_byte_parity.rs  gnu_full.rs  gnu_golden.rs  gnu_parity.rs  list_basic.rs  locale_goldens.rs  smoke_flags.rs
crates/f00-compat/: Cargo.toml
crates/f00-compat/src/: lib.rs
crates/f00-core/: Cargo.toml
crates/f00-core/benches/: list_bench.rs
crates/f00-core/src/: entry.rs  error.rs  filter.rs  ignore.rs  io_uring_stat.rs  lib.rs  linux_statx.rs  list.rs  options.rs  sort.rs
crates/f00-core/tests/: speed_smoke.rs
crates/f00-format/: Cargo.toml
crates/f00-format/src/: color.rs  columns.rs  csv.rs  human.rs  hyperlink.rs  icons.rs  json.rs  lib.rs  long.rs  perms.rs  quoting.rs  tree.rs
crates/f00-git/: Cargo.toml
crates/f00-git/src/: lib.rs
crates/f00-plugin/: Cargo.toml
crates/f00-plugin-hello/: Cargo.toml
crates/f00-plugin-hello/src/: lib.rs
crates/f00-plugin/src/: lib.rs
crates/f00-tui/: Cargo.toml
crates/f00-tui/src/: browser.rs  helpers.rs  lib.rs  main.rs  preview.rs
docs/: CONFIG.md  COREUTILS-PROGRESS.md  DNS-f00.sh.md  GNU-COMPLIANCE.md  MODERN-FEATURES.md  ROADMAP.md  SYNC.md  TERMINAL-UX.md
docs/examples/: config
docs/examples/themes/: catppuccin-mocha.theme  dracula.theme  f00.theme  gruvbox-dark.theme  monokai-pro.theme  nord.theme  one-dark.theme  solarized-light.theme  terminal.theme  tokyo-night-storm.theme
docs/images/: README.md
docs/superpowers/plans/: 2026-07-16-f00-mvp.md
docs/superpowers/specs/: 2026-07-16-f00-design.md
man/: README.md  f00.1
packaging/aur/: PKGBUILD
packaging/nfpm/: f00.yaml
packaging/scoop/: f00.json
packaging/shell/: f00.fish  f00.sh
press-kit/: README.md
press-kit/screenshots/: README.md
scripts/: bench-compare.sh  bench-list.sh  build-linux-packages.sh  check-man-sync.sh  gen-aur-pkgbuild.sh  gen-coreutils-progress.py  gen-homebrew-formula.sh  gen-man.sh  gen-scoop-manifest.sh  gen-suite-bench.py  gen-winget-manifests.sh  install.sh  publish-aur.sh  publish-crates.sh  publish-homebrew-tap.sh  publish-scoop.sh  publish-winget.sh  render-brand-assets.py  sync-package-manifests.sh
site/: CNAME  app.js  coreutils-progress.json  index.html  install.sh  manifest.webmanifest  styles.css
site/assets/logos/: README.md  preview.html
site/bench/: README.md  hyperfine-20k.json  hyperfine-20k.md  suite.json  suite.md
site/themes/: catppuccin-latte.theme  catppuccin-mocha.theme  dracula.theme  gruvbox-light.theme  monokai.theme  rose-pine.theme  solarized-dark.theme  tokyo-night.theme
