[workspace]
resolver = "2"
members = [
    "crates/f00-core",
    "crates/f00-format",
    "crates/f00-compat",
    "crates/f00-git",
    "crates/f00-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/theesfeld/f00"
homepage = "https://f00.sh"
authors = ["theesfeld"]
description = "f00 — a modern, friendly directory lister"
rust-version = "1.74"

[workspace.dependencies]
f00-core = { path = "crates/f00-core", version = "0.1.0" }
f00-format = { path = "crates/f00-format", version = "0.1.0" }
f00-compat = { path = "crates/f00-compat", version = "0.1.0" }
f00-git = { path = "crates/f00-git", version = "0.1.0" }

anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
directories = "5"
lscolors = { version = "0.20", default-features = false, features = ["nu-ansi-term"] }
nu-ansi-term = "0.50"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
terminal_size = "0.4"
thiserror = "2"
toml = "0.8"
unicode-width = "0.2"
walkdir = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
