[package]
name = "f00-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "f00 command-line interface"
rust-version.workspace = true
readme = "../../README.md"
keywords = ["ls", "cli", "filesystem"]
categories = ["command-line-utilities"]

[[bin]]
name = "f00"
path = "src/main.rs"

[dependencies]
f00-core = { workspace = true }
f00-format = { workspace = true }
f00-compat = { workspace = true }
f00-git = { workspace = true, optional = true }
f00-archive = { workspace = true, optional = true }
f00-tui = { workspace = true, optional = true }
f00-plugin = { workspace = true, optional = true }
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
directories = { workspace = true }
flate2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
terminal_size = { workspace = true }
toml = { workspace = true }
ureq = { workspace = true }
zip = { workspace = true, optional = true }

[features]
default = ["git", "archives", "tui"]
git = ["dep:f00-git"]
archives = ["dep:f00-archive"]
tui = ["dep:f00-tui"]
plugins = ["dep:f00-plugin"]
# zip needed for self-update extract on Windows
# always compile zip on windows via target dep below

[target.'cfg(windows)'.dependencies]
zip = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
