[package]
# Published on crates.io as `f00` (binary package). Path remains crates/f00-cli.
name = "f00"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "f00 — a modern, friendly directory lister (ls rewrite)"
rust-version.workspace = true
readme = "../../README.md"
keywords = ["ls", "cli", "filesystem", "coreutils"]
categories = ["command-line-utilities", "filesystem"]
exclude = ["/target", "/**/target"]

[lib]
name = "f00_cli"
path = "src/lib.rs"

[[bin]]
name = "f00"
path = "src/main.rs"

[dependencies]
f00-core = { workspace = true }
f00-format = { workspace = true }
f00-compat = { workspace = true }
f00-git = { workspace = true, optional = true }
f00-archive = { workspace = true, optional = true }
f00-tui = { workspace = true, optional = true }
f00-plugin = { workspace = true, optional = true }
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
directories = { workspace = true }
flate2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
terminal_size = { workspace = true }
toml = { workspace = true }
ureq = { workspace = true }
zip = { workspace = true, optional = true }

[features]
# Lean daily-driver defaults: git annotations + Linux io_uring fast path.
# Archives and embedded TUI are opt-in; prefer the separate `f00-tui` binary.
# io-uring is a no-op off Linux (dep is target-gated in f00-core).
default = ["git", "io-uring"]
git = ["dep:f00-git"]
archives = ["dep:f00-archive"]
# Optional: embed `f00 --browse` (full dual-pane FM). Prefer installing `f00-tui`.
tui = ["dep:f00-tui", "f00-tui/git"]
plugins = ["dep:f00-plugin"]
# Linux: enable io_uring batch metadata in f00-core
io-uring = ["f00-core/io-uring"]
# Full “kitchen sink” build (CI / power users)
full = ["git", "io-uring", "archives", "tui", "plugins"]
# zip needed for self-update extract on Windows
# always compile zip on windows via target dep below

[target.'cfg(windows)'.dependencies]
zip = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
