[package]
name = "f00-compat"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "GNU/POSIX ls compatibility helpers for f00"
rust-version.workspace = true

[dependencies]
f00-core = { workspace = true }
f00-format = { workspace = true }
