[package]
name = "f00-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Core listing, sorting, and filtering for f00"
rust-version.workspace = true

[dependencies]
chrono = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
