[package]
name = "f00-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Core listing, sorting, and filtering for f00"
rust-version.workspace = true

[dependencies]
chrono = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "list_bench"
harness = false
