[package]
name = "f00-format"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Display formatting for f00 (columns, long, tree, json, icons, color)"
rust-version.workspace = true

[dependencies]
f00-core = { workspace = true }
chrono = { workspace = true }
lscolors = { workspace = true }
nu-ansi-term = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
unicode-width = { workspace = true }
