[package]
name = "f00-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "f00 plugin host ABI (stable C ABI + host loader)"
rust-version.workspace = true

[dependencies]
directories = { workspace = true }
libloading = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
