[package]
name = "f00-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Interactive TUI directory browser for f00 (binary: f00-tui)"
rust-version.workspace = true
readme = "../../README.md"
keywords = ["ls", "tui", "filesystem", "file-manager"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "f00-tui"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
crossterm = { workspace = true }
f00-core = { workspace = true }
f00-format = { workspace = true }
f00-git = { workspace = true, optional = true }
ratatui = { workspace = true }
syntect = { workspace = true }

[features]
# Standalone browser ships with git annotations when available.
default = ["git"]
git = ["dep:f00-git"]
